<resources>
    <string name="app_name">ReserveAp</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="guest">Guest</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="you_need_help"><u>You need help?</u></string>
    <string name="sign_up_now"><u>Sign Up Now</u></string>
    <string name="are_you_new_member">Are you new member ?</string>
    <string name="fname">First Name</string>
    <string name="namel">Name Last</string>
    <string name="mobileno">Mobile No</string>
    <string name="repassword">Re-Type Password </string>
    <string name="accept_terms_conditions"><![CDATA[Accept Terms & Conditions]]></string>
    <string name="some_fieldis_empty">Some Fields Required</string>
    <string name="appointments">Appointments</string>
    <string name="address">Address</string>
    <string name="about">About</string>
    <string name="doctor_list">Doctor List</string>
    <string name="reservation">Make Reservation</string>
    <string name="bodyshop">Body Shop</string>
    <string name="maingradge">Main Garage</string>
    <string name="quickservice">Quick Service</string>
    <string name="confirm">Confirm</string>
    <string name="backhome">Go Back to Home</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="summary">Summary</string>
    <string name="calendar">CALENDAR</string>
    <string name="notification">Notification</string>
    <string name="choose_time">Choose Time</string>
    <string name="date_time">Date/Time</string>
    <string name="name">Name</string>
    <string name="choose_branch">Choose Branch</string>
    <string name="car_doc">Car Documents</string>
    <string name="plateno">Plate number</string>
    <string name="reject">Reject</string>
    <string name="accepted">Accepted</string>
    <string name="pending">pending</string>
    <string name="cancel">Cancel</string>
    <string name="_2018_2021_reservation_co_all_rights_reserved">2018 - 2021 Reservation co. All Rights Reserved</string>
    <string name="forgot">Forget Password</string>
    <string name="send">Send</string>
    <string name="reservations">Reservation</string>
    <string name="notification_error_ssl_cert_invalid">notification_error_ssl_cert_invalid</string>
    <string name="history">History</string>
    <string name="current">Current</string>
</resources>
