<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Activities.SignUp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:id="@+id/res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="25dp"
            android:paddingBottom="240dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/repple_effect_trs"
                android:onClick="backbbt"
                android:padding="16dp"
                android:src="@drawable/btback" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="230dp"
                android:layout_height="150dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35dp"
                android:padding="5dp"
                android:src="@drawable/logo_trans" />

            <EditText
                android:id="@+id/namef_edt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/logo"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/fname"
                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />


            <EditText
                android:id="@+id/namel_edt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/namef_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/namel"
                android:inputType="textPersonName"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/mobile_edt"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/namel_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/mobileno"
                android:inputType="phone"

                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/mobile_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"

                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/email_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/password"
                android:inputType="textPassword"

                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />

            <EditText
                android:id="@+id/repassword_edt"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/password_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:background="@drawable/edittext_round"
                android:backgroundTint="#fff"
                android:fontFamily="sans-serif-black"
                android:hint="@string/repassword"
                android:inputType="textPassword"
                android:paddingEnd="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="5dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textCursorDrawable="@drawable/color_cursor"
                android:textSize="17dp" />

            <LinearLayout
                android:id="@+id/trm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/repassword_edt"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/terms_chekbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorWhite" />

                <io.approots.reserve.CustomFont.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/accept_terms_conditions"
                    android:textColor="@color/colorWhite"
                    android:textSize="15dp" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/signup_button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/trm"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/round_sky"
                android:clickable="true"
                android:focusable="true">

                <ProgressBar
                    android:id="@+id/progresbar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginRight="20dp"
                    android:indeterminate="true"
                    android:theme="@style/Progressbar.White"
                    android:visibility="gone" />

                <io.approots.reserve.CustomFont.SemiBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/textsize_button" />
            </RelativeLayout>

            <io.approots.reserve.CustomFont.SemiBoldTextView
                android:id="@+id/help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_button"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:onClick="help"
                android:text="@string/you_need_help"
                android:textColor="@color/colorWhite"
                android:textSize="15dp" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>