<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    tools:context=".Activities.History.Hostory_main">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:padding="4dp"
            android:src="@drawable/logo_trans" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="85dp"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/repple_effect_trs_overal"
            android:onClick="backsas"
            android:padding="22dp"
            android:src="@drawable/close_icon" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/top"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="40dp"
        app:cardBackgroundColor="#00FFFDFD"
        app:cardCornerRadius="5dp"
        app:cardElevation="6dp"
        app:cardPreventCornerOverlap="false"
        app:contentPadding="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <io.approots.reserve.CustomFont.BoldTextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="-3dp"
                    android:text="@string/summary"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18dp" />

                <LinearLayout
                    android:id="@+id/div"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/text"
                    android:background="@color/colorGrey_broder"
                    android:orientation="horizontal" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/div"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/d1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginLeft="20dp"
                        android:background="@color/colorGrey_broder"
                        android:orientation="horizontal" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:layout_toStartOf="@+id/d3"
                        android:layout_toLeftOf="@+id/d3"
                        android:layout_toEndOf="@+id/d1"
                        android:layout_toRightOf="@+id/d1">

                        <io.approots.reserve.CustomFont.SemiBoldTextView
                            android:id="@+id/calender"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentLeft="true"
                            android:layout_toStartOf="@+id/d2"
                            android:layout_toLeftOf="@+id/d2"
                            android:layout_weight="0.1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="@drawable/repple_effect_trs"
                            android:gravity="center"
                            android:paddingTop="5dp"
                            android:text="@string/calendar"
                            android:textAlignment="center"
                            android:textColor="@color/colorGrey_text"
                            android:textSize="14dp"
                            app:textAllCaps="true" />

                        <LinearLayout
                            android:id="@+id/d2"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:background="@color/colorGrey_broder"
                            android:orientation="horizontal" />

                        <io.approots.reserve.CustomFont.SemiBoldTextView
                            android:id="@+id/reservation"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_toEndOf="@+id/d2"
                            android:layout_toRightOf="@+id/d2"
                            android:layout_weight="0.1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="@drawable/repple_effect_trs"
                            android:gravity="center"
                            android:paddingTop="5dp"
                            android:text="@string/reservations"
                            android:textAlignment="center"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14dp"
                            app:textAllCaps="true" />

                        <LinearLayout
                            android:id="@+id/d4"
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_centerHorizontal="true"
                            android:background="@color/colorGrey_broder"
                            android:orientation="horizontal" />

                        <io.approots.reserve.CustomFont.SemiBoldTextView
                            android:id="@+id/history"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_alignParentRight="true"
                            android:layout_toEndOf="@+id/d2"
                            android:layout_toRightOf="@+id/d2"
                            android:layout_weight="0.1"
                            android:clickable="true"
                            android:focusable="true"
                            android:foreground="@drawable/repple_effect_trs"
                            android:gravity="center"
                            android:paddingTop="5dp"
                            android:text="@string/history"
                            android:textAlignment="center"
                            android:textColor="@color/colorGrey_text"
                            android:textSize="14dp"
                            app:textAllCaps="true" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/d3"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@color/colorGrey_broder"
                        android:orientation="horizontal" />
                </RelativeLayout>
            </RelativeLayout>

            <!-- The main content view where fragments are loaded -->
            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior" />
        </LinearLayout>

    </android.support.v7.widget.CardView>
</RelativeLayout>